# Thale

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  mach  thale.cabal
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
app/: Main.hs
examples/: ADT.th  BubbleSort.thl  Bubble_sort.th  Bubble_sort.thl  Calculator.th  Fibonacci.thl  ISO.thl  Keywords.th  Main.th  Main.thl  Prime.thl  QuickSort.thl  test.th
source/: config.h.in  main.c
source/ast/: ast.c  ast.h
source/error/: error.c  error.h
source/parser/: lexer.l  parser.y
src/Thale/Cli/: Cli.hs  Entry.hs  New.hs  Options.hs  Parser.hs  Verify.hs
src/Thale/Cli/Subcommand/: Build.hs  Check.hs  Doc.hs  Format.hs  New.hs  Repl.hs  Run.hs  Test.hs  Verify.hs
src/Thale/Compiler/: Ast.hs  Error.hs  Ir.hs  Lexer.x  Optimize.hs  Parser.y  Pretty.hs  Token.hs
src/Thale/Data/: ProjectConfig.hs  Toml.hs
src/Thale/Util/: BuildHash.hs  Color.hs  Prompt.hs  Source.hs
