cabal-version:      3.0
name:               thale
version:            0.2.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             PeterGriffinSr
maintainer:         codezz-ops@protonmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options:
    -Wall -Wcompat -Wimplicit-prelude -Wmissing-export-lists
    -Wmissing-pattern-synonym-signatures -Wmissing-home-modules
    -Wmissing-local-signatures -Werror=missing-signatures
    -Werror=unused-imports -Werror=unused-matches
    -Werror=incomplete-patterns -Werror=incomplete-uni-patterns
    -Werror=incomplete-record-updates -Werror=deprecations

executable thale
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app, src
    other-modules:    Thale.Cli.Cli Thale.Cli.Options Thale.Cli.Parser Paths_thale Thale.Cli.New
    build-depends:    base, optparse-applicative, filepath, directory
    default-language: Haskell2010