cabal-version: 3.0
name: thale
version: 0.4.0.0
license: MIT
license-file: LICENSE
maintainer: codezz-ops@protonmail.com
author: PeterGriffinSr
homepage: https://github.com/PeterGriffinSr/Thale
bug-reports: https://github.com/PeterGriffinSr/Thale/issues
synopsis: A small, purely functional programming language.
description:
  Thale is a small, purely functional programming language with immutability, expression-based syntax, and powerful pattern matching. The language emphasizes clarity, safety, and functional purity.

category: Language
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/PeterGriffinSr/Thale

library
  exposed-modules:
    Thale.Cli.Cli
    Thale.Compiler.Ast
    Thale.Compiler.Lexer
    Thale.Compiler.Parser
    Thale.Compiler.Pretty

  hs-source-dirs: src
  other-modules:
    Paths_thale
    Thale.Cli.New
    Thale.Cli.Options
    Thale.Cli.Parser
    Thale.Cli.Verify
    Thale.Compiler.Token

  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror

  build-depends:
    array,
    base,
    directory,
    filepath,
    optparse-applicative,
    prettyprinter,
    process,
    text,
    time,

executable thale
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror

  build-depends:
    base,
    thale,
