cabal-version: 3.0
name: thale
version: 0.5.0.0
license: MIT
license-file: LICENSE
maintainer: codezz-ops@protonmail.com
author: PeterGriffinSr
homepage: https://github.com/PeterGriffinSr/Thale
bug-reports: https://github.com/PeterGriffinSr/Thale/issues
synopsis: A small, purely functional programming language.
description:
  Thale is a small, purely functional programming language with immutability, expression-based syntax, and powerful pattern matching. The language emphasizes clarity, safety, and functional purity.

category: Language
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/PeterGriffinSr/Thale

library
  exposed-modules:
    Thale.Cli.Entry

  hs-source-dirs: src
  other-modules:
    Paths_thale
    Thale.Cli.Options
    Thale.Cli.Parser
    Thale.Cli.Subcommand.Build
    Thale.Cli.Subcommand.Check
    Thale.Cli.Subcommand.Doc
    Thale.Cli.Subcommand.Format
    Thale.Cli.Subcommand.New
    Thale.Cli.Subcommand.Repl
    Thale.Cli.Subcommand.Run
    Thale.Cli.Subcommand.Test
    Thale.Cli.Subcommand.Verify
    Thale.Compiler.Ast
    Thale.Compiler.Error
    Thale.Compiler.Ir
    Thale.Compiler.Lexer
    Thale.Compiler.Optimize
    Thale.Compiler.Parser
    Thale.Compiler.Pretty
    Thale.Compiler.Token
    Thale.Data.ProjectConfig
    Thale.Data.Toml
    Thale.Util.BuildHash
    Thale.Util.Color
    Thale.Util.Prompt
    Thale.Util.Source

  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror

  build-depends:
    array,
    base,
    containers,
    directory,
    filepath,
    mtl,
    optparse-applicative,
    prettyprinter,
    process,
    text,
    time,

executable thale
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror

  build-depends:
    base,
    thale,
